tests/snapshots/test_runner__tests__compiler__typecheck__array_homogeneity_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: [Int] = [1, ()]

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/array_homogeneity_1.kk:1:20
  │
1 │ let x: [Int] = [1, ()]
  │                    ^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Int         | + ()        |
    +---------------+-------------+
